Add getBookingsByUser endpoint returning BookingDetailsDto
